# Lab_di_Programmazione_Francesca_Sani

./: Articolo.cpp  Articolo.h  CMakeLists.txt  Lista.cpp  Lista.h  Observer.cpp  Observer.h  README.md  Subject.cpp  Subject.h  Utente.cpp  Utente.h  main.cpp
test/: ArticoloTest.cpp  CMakeLists.txt  ListaTest.cpp  UtenteTest.cpp  runAllTest.cpp
